<resources>
    <string name="app_name">3 store app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_Rewards">Rewards</string>
    <string name="menu_Cart">Cart</string>
    <string name="menu_Wishlist">Wishlist</string>
    <string name="menu_Account">Account</string>
    <string name="menu_sign_Out">Sign out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="city">City*</string>
    <string name="locality_area_street">locality,area,street</string>
    <string name="flat_number_bulding_name">flat number,bulding name</string>
    <string name="pinecode">pinecode</string>
    <string name="state">State*</string>
    <string name="landmark_optional">landmark(optional)</string>
    <string name="name">name</string>
    <string name="mobile_number">mobile number</string>
    <string name="alternate_mobile_number_optional">Alternate mobile number(optional)</string>
    <string name="save">save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="continues">continue</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="you_will_shortly_receive_your_order_confirmation_message_and_email">You will shortly receive your order confirmation message and email</string>
    <string name="expected_delivery_between_4_6_days">Expected delivery between 4-6 days</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="My_Addresses">My Addresses</string>
    <string name="deliver_here">Deliver here</string>
    <string name="verification_code_has_been_sent_to_967_774018414">Verification code has been sent to +967 774018414</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_wait_it_can_take_upto_60s_120s_to_receive_the_verification_sms">Please wait, it can take upto 60s-120s to receive the verification SMS.</string>
    <string name="verify">Verify</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">buy now</string>
    <string name="product_not_found">product not found!</string>
    <string name="Search_for_product">Search for product</string>
    <string name="user_info">User Info</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="pincode">pincode</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="free_2_coupans">free 2 coupans</string>
    <string name="offers_applied">Offers applied</string>
    <string name="coupans_applied">Coupans applied</string>
    <string name="apply_your_coupan_here">Apply Your Coupan Here.</string>
    <string name="redeem">Redeem</string>
    <string name="remove_item">Remove item</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="price_2_items">Price (2 items)</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="total_amount">Total Amount</string>
    <string name="your_coupan">Your Coupan</string>
    <string name="original_price">Original Price</string>
    <string name="price_after_coupan_redemption">Price after coupan redemption *</string>
    <string name="make_sure_to_apply_the_coupan_in_your_cart">* Make sure to apply the coupan in your cart.</string>
    <string name="apply">Apply</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_worry_we_just_need_your_registered_e_mail_address_and_it_s_done">Don\'t worry we just need your registered e-mail address and it\'s done!</string>
    <string name="enter_your_email_address">Enter your email address :</string>
    <string name="reset_password">Reset Password</string>
    <string name="lt_lt_go_back"><![CDATA[<< Go back]]></string>
    <string name="retry">Retry</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="update">Update</string>
    <string name="email_id">Email id :</string>
    <string name="passwords">Password :</string>
    <string name="register_here">Register here</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_name">Enter your name :</string>
    <string name="password_at_least_8_characters">Password (at least 8 characters):</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="sign_up">Sign up</string>
    <string name="already_forgot_password_have_an_account_sign_in">Already forgot password have an account? Sign in</string>
    <string name="change_photo">Change photo</string>
    <string name="title">Title</string>
    <string name="view_all">View all</string>
    <string name="deals_of_the_day">Deals of the day!</string>
    <string name="my_addresses">My Addresses</string>
    <string name="your_ratings">Your ratings</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="email_address">Email address:</string>
    <string name="are_you_sure_you_want_to_cancel_the_order">Are you sure you want to cancel the order ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_order_has_been_placed">Your order has been placed.</string>
    <string name="packed">Packed</string>
    <string name="your_order_has_been_packed">Your order has been packed.</string>
    <string name="shipped">Shipped</string>
    <string name="your_order_has_been_shipped">Your order has been shipped.</string>
    <string name="delivered">Delivered</string>
    <string name="your_order_has_been_delivered">Your order has been delivered.</string>
    <string name="your_current_order_status">Your current order status</string>
    <string name="out_for_delivery">OUT FOR DELIVERY</string>
    <string name="please_enter_your_current_password_below_to_change_your_password">Please enter your current password below to change your password</string>
    <string name="done">Done</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="paytm">Paytm</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="other_details">Other Details</string>
    <string name="product_title">Product title</string>
    <string name="total_ratings">Total ratings</string>
    <string name="available">Available</string>
    <string name="check_price_after_coupan_redemption">Check price after coupan redemption</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="ratings">Ratings</string>
    <string name="_27_ratings">27 ratings</string>
    <string name="discount_coupan">Discount Coupan</string>
    <string name="get_20_discount_on_any_product_above_rs_500_and_below_rs_3000">Get 20% discount on any product above Rs.500/- and below Rs.3000/-</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="change_or_add_a_new_address">Change or add a new address</string>
    <string name="just_few_steps_away_from_your_cart">Just few steps away from your cart.</string>
    <string name="free_coupan">free coupan</string>
    <string name="_27_ratingss">(27) ratings</string>
    <string name="cash_on_delivery_available">Cash on delivery available</string>
    <string name="your_recent_orders">Your recent orders</string>
    <string name="notification">notification</string>
    <string name="search">search</string>
    <string name="homes">Homes</string>
    <string name="mobiles">mobiles</string>
    <string name="elctironics">electronics</string>
    <string name="Furnitur">Furniture</string>
    <string name="Fashion" >Fashion</string>
    <string name="Books" >Books</string>
    <string name="Sports" >Sports</string>
    <string name="Toys" >Toys</string>
    <string name="Wallarts" >Wallarts</string>
    <string name="Shoes" >Shoes</string>
    <string name="Accessories" >Accessories</string>
    <string name="Thank_you_for_rating">Thank you for rating!</string>
    <string name="added_to_cart_successfully">Added to Cart Successfully!</string>
    <string name="Removed_Successfully">Removed Successfully!</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="product_titles">product_title</string>
    <string name="product_prices">product_price</string>
    <string name="cutted_prices">cutted_price</string>
    <string name="free_coupen_titles">free_coupen_title</string>
    <string name="product_descriptions">product_description</string>
    <string name="product_other_detailss">product_other_details</string>
    <string name="spec_titles">spec_title_</string>
    <string name="ar"></string>
    <string name="namee">_name</string>
    <string name="values">_value</string>
    <string name="average">average_rating</string>
    <string name="ratingss">)ratings</string>
    <string name="free_coupen_body">free_coupen_body</string>
    <string name="average_rating">average_rating</string>
    <string name="layout_titlear">layout_title</string>
    <string name="language">english</string>
    <string name="loading">Loading...</string>

    <string-array name="india_states">
        <!--        <item>pilgrimage</item>-->
        <!--        <item>ibb</item>-->
        <!--        <item>Taiz</item>-->
        <!--        <item>Eden</item>-->
        <!--        <item>san'a</item>-->
        <!--        <item>dhamar</item>-->
        <!--        <item>omran</item>-->
        <!--        <item>hollow</item>-->
        <!--        <item>Daman and Diu</item>-->
        <!--        <item>Delhi</item>-->
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>
