<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_mall"
            android:icon="@mipmap/mymall"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@mipmap/shoppingbag"
            android:title="@string/menu_orders"/>
        <item
            android:id="@+id/nav_my_rewards"
            android:icon="@mipmap/reward"
            android:title="@string/menu_Rewards" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@mipmap/cart"
            android:title="@string/menu_Cart" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@mipmap/heart"
            android:title="@string/menu_Wishlist" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@mipmap/usermale"
            android:title="@string/menu_Account" />
        <item
            android:id="@+id/nav_my_setting"
            android:icon="@drawable/setting"
            android:title="@string/action_settings"/>
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@mipmap/logoutt"
        android:title="@string/menu_sign_Out" />
</menu>
